Lots of changes!

--- a/lore/alien_guide.html
+++ b/lore/alien_guide.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="../images/favicon.ico">
-    <title>Creature Biology - The Scary Monkey Show</title>
+    <title>Alien Guide - The Scary Monkey Show</title>
     <!--Stylesheets-->
     <link rel="stylesheet" href="../css/bootstrap.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="../css/style.css" media="screen" title="no title" charset="utf-8">
