--- a/other_links/resisty_database.html
+++ b/other_links/resisty_database.html
@@ -4,15 +4,15 @@
     <!--Meta Tags-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="icon" href="../images/favicon.ico">
     <title>The Resisty Database - The Scary Monkey Show</title>
     <!--Stylesheets-->
     <link rel="stylesheet" href="../css/bootstrap.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="../css/resisty.css" media="screen" title="no title" charset="utf-8">
     <!--Javascript-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script type="text/javascript" src='../js/script.js'></script>
-    <script type="text/javascript" src='../js/bootstrap.js'></script>
+    <script type="text/javascript" src="../js/script.js"></script>
+    <script type="text/javascript" src="../js/bootstrap.js"></script>
     <!--Fonts-->
     <link href='http://fonts.googleapis.com/css?family=Voltaire' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
@@ -86,10 +86,10 @@
                         <h2>All Things Resisty!</h2>
                         <hr>
                         <p>
-                            We are the resisty! A group of members from all reaches of the universe with a common enemy. The Irken Empire!
+                            We are the resisty! An organization of members from all reaches of the universe with a common enemy. The Irken Empire! Our mission is to overthrow the Irken Menace and liberate everyone they've conquered!
                         </p>
                         <div class="col-lg-6 col-md-6 col-sm-6">
-                            <a href="../other_links/resisty-database/history.html"><img class="info_buttons" src="../images/res/history.png" alt="history"/></a>
+                            <a href="../other_links/resisty_database/members.html"><img class="info_buttons" src="../images/resisty_database/members.png" alt="Members"/></a>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
                             <a href="../other_links/resisty_database/ship.html"><img class="info_buttons" src="../images/resisty_database/ship.png" alt="ship" /></a>
