--- a/resources/other_fan_sites.html
+++ b/resources/other_fan_sites.html
@@ -95,6 +95,13 @@
                                     This is the Scary Monkey Show website from years ago that inspired the creation of this website. Most of the information came directly from the old Scary Monkey Show site. Though it's dead and gone, it still lives on archive.org. Ain't technology great?
                                 </p>
                             </div></a>
+                            <a target="_blank" style="text-decoration: none; color: white;" href="http://operationheadpigeons.tumblr.com/">
+                                <div class="item">
+                                    <h3>Operation Head Pigeons 2.0</h3>
+                                    <p>
+                                        Operation Head Pigeons is the place to go for all Zim news and tips on new collectables and comics and everything Zim. The Ultimate place for fans.
+                                    </p>
+                                </div></a>
                             <a target="_blank" style="text-decoration: none; color: white;" href="http://www.buzzyworld.com/zim/">
                                 <div class="item">
                                     <h3>The Amazing Invader Zim Website <small>on Buzzyworld</small></h3>
