--- a/show_info/canceled_episodes.html
+++ b/show_info/canceled_episodes.html
@@ -158,7 +158,10 @@
                         <div class="item">
                             <h3>The Trial <small>#27a/b</small></h3>
                             <p>
-                                Zim makes Dib look like a fraud on Mysterious Mysteries by using paranormal stuff against him.
+                                Zim is evaluated to see whether he deserves to exist or not. Irk's control brains get a bit of a surprise from our pal, Zim.
+                            </p><br>
+                            <p>
+                                There were no voice tracks recorded for this episode but there was a reading of the script at Invader Con. You can find that right <a target="_blank" href="https://www.youtube.com/watch?v=XTVhjIOK7nw">here!</a>
                             </p>
                             <a href="../show_info/canceled_episodes/the_trial.html">Episode Transcript</a> | <p style="color: grey;  font-size: 1em; display: inline;">No Audio File</p>
                         </div>
