--- a/other_links/resisty_database/members.html
+++ b/other_links/resisty_database/members.html
@@ -90,7 +90,7 @@
                             The ship of the resisty is manned by many different species of alien. All of which have had their worlds conquered by the Irken Empire. All have banded together to form a resistance to the oppression. Here are some of them. <small style="color:grey">To be perfectly honest, they probably should have gotten a couple more members before trying an attack on The Massive.</small>
                         </p>
                         <div class="item">
-                            <h3>Lard Narr</h3>
+                            <h3>Lard Nar</h3>
                             <img src="../../images/resisty_database/members/lard_narr.png" alt="Lard Narr" />
                             <p>
                                 Rank: <small>Commander</small>
@@ -115,7 +115,23 @@
                                 Home Planet: <small>Unknown</small>
                             </p>
                             <p>
-                                Description: <small>Shloonktapooxis is second in command to Lard Narr and mans the laser cannon. He talks a lot and seems to have a hard time keeping his mouth shut.</small>
+                                Description: <small>Shloonktapooxis is second in command to Lard Nar and mans the laser cannon. He talks a lot and seems to have a hard time keeping his mouth shut.</small>
+                            </p>
+                            <p>
+                                Notable Quote: <small>"How about 'The Pirate Monkeys?' It's a awesome name."</small>
+                            </p>
+                        </div>
+                        <div class="item">
+                            <h3>Spleenk</h3>
+                            <img src="../../images/resisty_database/members/spleenk.jpg" alt="" />
+                            <p>
+                                Rank: <small style="color:grey">Navigator</small>
+                            </p>
+                            <p>
+                                Home Planet: <small>Unknown</small>
+                            </p>
+                            <p>
+                                Description: <small>Spleenk is the navigator for The Resisty.  Prone to giving bad advice, he suggested the assault on The Massive and also suggested the name 'The Resisty.' When under pressure, Spleenk goes into spastic convulsions.</small>
                             </p>
                             <p>
                                 Notable Quote: <small>"How about 'The Pirate Monkeys?' It's a awesome name."</small>
